--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     app:startDestination="@id/registerFragment">
 
@@ -14,7 +15,7 @@
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
-        android:name=""
+        android:name="com.priyam.notesapp.ui.login.RegisterFragment"
         android:label="RegisterFragment">
         <action
             android:id="@+id/action_registerFragment_to_loginFragment"
@@ -27,7 +28,7 @@
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
-        android:name=""
+        android:name="com.priyam.notesapp.ui.login.LoginFragment"
         android:label="fragment_register"
         tools:layout="@layout/fragment_register">
         <action
@@ -38,10 +39,10 @@
     </fragment>
     <fragment
         android:id="@+id/profileFragment"
-        android:name=""
+        android:name="com.priyam.notesapp.ui.profile.ProfileFragment"
         android:label="ProfileFragment" />
     <fragment
         android:id="@+id/noteFragment"
-        android:name=""
+        android:name="com.priyam.notesapp.ui.note.NoteFragment"
         android:label="NoteFragment" />
 </navigation>
