--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/mainFragment"
-        android:name=""
+        android:name="com.priyam.notesapp.ui.note.MainFragment"
         android:label="MainFragment">
         <action
             android:id="@+id/action_mainFragment_to_noteFragment"
