--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.NOTESAPP" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.NOTESAPP" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#64B5F6</item>
         <item name="colorPrimaryVariant">#2196F3</item>
